# mdserve

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  install.sh  template.html
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  commitlint.yml
docs/: architecture.md
docs/plans/: 2026-02-28-recursive-directory-design.md  2026-02-28-recursive-directory-plan.md
examples/: tesla.md
skills/mdserve/: SKILL.md
src/: app.rs  lib.rs  main.rs  template.rs
templates/: base.html  classic.html  cv.html  main.html
tests/: integration_test.rs
tests/fixtures/: arabic.md  english.md  farsi.md  hebrew.md  rtl.md
