[package]
name = "mdserve"
version = "0.3.0"
authors = ["Jose Fernandez <me@jrfernandez.com>"]
edition = "2024"
license = "MIT"
description = "Fast markdown preview server with live reload and theme support"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
markdown = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
notify = "8.2.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
axum-test = { version = "16.0", features = ["ws"] }
tempfile = "3.0"
tokio-test = "0.4"
